syntax = "proto3";

import "google/protobuf/timestamp.proto";

package execution;

service Execution {
    rpc getOrders (GetOrdersRequest) returns (GetOrdersResponse);
    rpc placeOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
    rpc changeOrderState (ChangeOrderStateRequest) returns (ChangeOrderStateResponse);
    rpc finishOrder (FinishOrderRequest) returns (FinishOrderResponse);
    rpc addProductType (AddProductTypeRequest) returns (AddProductTypeResponse);
    rpc getOrderResponses (GetOrderResponsesRequest) returns (GetOrderResponsesResponse);
}

message GetOrdersRequest {
    OrderTimespan timespan = 1;
    State state = 2;
}
message GetOrdersResponse {
    repeated Order orders = 1;
}

message PlaceOrderRequest {
    OrderDto order = 1;
}
message PlaceOrderResponse {
    Order order = 1;
}

message ChangeOrderStateRequest {
    int32 orderId = 1;
    State state = 2;
}
message ChangeOrderStateResponse {
    Order order = 1;
}

message FinishOrderRequest {
    int32 orderId = 1;
    string orderSerial = 2;
}
message FinishOrderResponse {
    Order order = 1;
}

message AddProductTypeRequest {
    string name = 1;
    int32 price = 2;
}

message AddProductTypeResponse {
    int32 id = 1;
    string name = 2;
    int32 price = 3;
}

message GetOrderResponsesRequest {
    int32 orderId = 1;
}

message GetOrderResponsesResponse {
    repeated OrderResponse orderResponses = 1;
}

//---------------------------- dtos --------------------------------

message OrderDto {
    google.protobuf.Timestamp endDate = 1;
    string personnelId = 2;
    string serial = 3;
    repeated OrderSpecificationDto orderSpecs = 4;
}

message OrderSpecificationDto {
    int32 productTypeId = 1;
    int32 quantity = 2;
}

//--------------------------- entities -----------------------------
message Order {
    int32 id = 1;
    string serial = 2;
    google.protobuf.Timestamp startDate = 3;
    google.protobuf.Timestamp endDate = 4;
    State state = 5;
    string personnelId = 6;
}

message OrderResponse {
    int32 id = 1;
    google.protobuf.Timestamp startDate = 3;
    google.protobuf.Timestamp endDate = 4;
    State state = 5;
    int32 orderId = 6;
}


enum OrderTimespan {
    currentWeek = 0;
    lastWeek = 1;
    allUpcoming = 2;
}

enum State {
    active = 0;
    paused = 1;
    finished = 2;
    any = 3;
}
